yaml files/networking/networkpolicy.yaml
### this network policy rule is only allowing the traffic on only two pods with the labels mydb and mywp
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
#  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mydb
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
#    - ipBlock:
#        cidr: 172.17.0.0/16
#        except:
#        - 172.17.1.0/24
#    - namespaceSelector:
#        matchLabels:
#          project: myproject
    - podSelector:
        matchLabels:
          app: mywp ### label of the pod
    ports:
    - protocol: TCP
      port: 3306 ### port needs to be added
#  egress:
#  - to:
#    - ipBlock:
#        cidr: 10.0.0.0/24
#    ports:
#    - protocol: TCP
#      port: 5978

root@master:~/app/network#
